# TruenasAppsWatcher

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
cosmic/: Cargo.toml
cosmic/data/: com.github.davidboulay.CosmicAppletTruenasApps.desktop
cosmic/src/: backend.rs  docker.rs  main.rs  updater.rs  window.rs
macos/: AppIcon.icns  Info.plist  Package.swift
macos/Sources/TruenasAppsWatcher/: App.swift  AppState.swift  HTTP.swift  Model.swift  PopoverView.swift  PortainerClient.swift  Registry.swift  ReleaseCheck.swift  SettingsView.swift  StatusIcon.swift  TrueNASClient.swift
macos/scripts/: dmg-settings.py  make_app.sh  make_dmg.sh
src/: backend.rs  docker.rs  lib.rs  updater.rs  window.rs
