[package]
name = "cosmic-applet-truenas-apps"
version = "0.4.1"
edition = "2024"
license = "GPL-3.0-only"
description = "TrueNAS Apps Watcher — a COSMIC panel applet that watches a TrueNAS server (and optionally Portainer) for pending Docker app updates and can apply them."

[[bin]]
name = "cosmic-applet-truenas-apps"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", rev = "59bebbdffeb8ed4abd3f2577c099745b9a2f2c37", default-features = false, features = [
    "applet",
    "applet-token",
    "process",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
jiff = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"

[profile.release]
lto = "thin"
opt-level = 2

# `cargo deb` packaging (the .deb attached to GitHub releases).
[package.metadata.deb]
name = "truenas-apps-watcher"
maintainer = "David Boulay <davidboulay@users.noreply.github.com>"
copyright = "David Boulay, GPL-3.0-only"
section = "utils"
priority = "optional"
extended-description = """\
A COSMIC panel applet that watches a TrueNAS SCALE server (and optionally \
Portainer) for pending Docker app updates and can apply them from the panel."""
assets = [
    ["target/release/cosmic-applet-truenas-apps", "usr/bin/", "755"],
    ["data/com.github.davidboulay.CosmicAppletTruenasApps.desktop", "usr/share/applications/", "644"],
    ["../README.md", "usr/share/doc/truenas-apps-watcher/README.md", "644"],
]
